--- a/docvitta/templates/header.html
+++ b/docvitta/templates/header.html
@@ -50,6 +50,9 @@
                             </div>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link p-0" href="{% url 'homepage:sales' %}">Акции</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link p-0" href="{% url 'homepage:contact' %}">Контакты</a>
                         </li>
                     </ul>
