--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -11,9 +11,8 @@
             <div class="banner-inner-box position-relative">
                 <div class="banner-inner-con">
                     <div class="banner-title">
-                        <h1 data-aos="fade-up" data-aos-duration="700">Клиника
-                            Доктор
-                            Витта</h1>
+                        <h1 data-aos="fade-up" data-aos-duration="700">Клиника <br>
+                            Доктор Витта</h1>
                         <p data-aos="fade-up" data-aos-duration="700">Забота - наше призвание.
                             Изменить систему здравоохранения к лучшему.
                             Мы здесь на всю жизнь.
@@ -106,9 +105,6 @@
 
         <div id="fade1" onClick="lightbox_close();"></div>
     </section>
-<!-- Sales -->
-{% include 'sales.html' %}
-<!-- end sales -->
     <!-- ABOUT SECTION -->
 {% include 'getintouch.html' %}
 {% endblock %}
