edit sales, font style

--- a/docvitta/templates/header.html
+++ b/docvitta/templates/header.html
@@ -45,6 +45,7 @@
                                 <ul class="list-unstyled mb-0">
                                     <li><a class="dropdown-item" href="https://docvitta.infoclinica.ru/pricelist" target="_blank">Платные услуги</a></li>
                                     <li><a class="dropdown-item" href="/page/7/">Информация для пациентов</a></li>
+                                    <li><a class="dropdown-item" href="/page/8/">Политика обработки перс.данных</a></li>
                                     <li><a class="dropdown-item" href="/article/">Статьи</a></li>
                                 </ul>
                             </div>
