edit sales, banner, add license

--- a/docvitta/templates/footer.html
+++ b/docvitta/templates/footer.html
@@ -13,7 +13,8 @@
                         ОГРН: 1235000103337<br>
                         Юридический адрес: 143900, Россия, Московская Обл., Балашиха, Тер. западная коммуная зона, Энтузиастов ш., влд. 1а, пом. 1</p>
                     <p>Ежедневно с 06-30 до 19-30</p>
-                    <p class="mb-0">Сведения о лицензии - Соискатель</p>
+                    <p class="mb-0">Регистрационный номер лицензии: Л041-01162-50/01069581</p>
+                    <p class="mb-0">Дата предоставления лицензии: 21.02.2024</p>
                     <p class="mb-0"><a href="https://anketa.rosminzdrav.ru/staticogvjustank/30/1" target="_blank">Амбулаторные условия</a></p>
                 </div>
 
