--- a/docvitta/templates/homepage/sales.html
+++ b/docvitta/templates/homepage/sales.html
@@ -17,10 +17,10 @@
 {% endblock %}
 {% block content %}
     <!-- BANNER SECTION -->
-    <section class="w-100 float-left sub-banner-con position-relative">
+    <section class="w-100 float-left sub-banner-con position-relative" style="max-height: 120px; background: url({% static 'assets/images/sub-banner-bg-img2.jpg' %}) no-repeat center;">
         <div class="wrapper2">
             <div class="sub-banner-inner-box banner-inner-box position-relative text-center w-100 float-left">
-                <h1 data-aos="fade-up" data-aos-duration="700">Акции</h1>
+                <h2 data-aos="fade-up" data-aos-duration="700">Акции</h2>
                 <p data-aos="fade-up" data-aos-duration="700">Наши особые предложения</p>
             </div>
         </div>
@@ -29,6 +29,10 @@
     <!--blog-sec-->
     <section class="blog-posts blogpage-section w-100 float-left">
         <div class="container">
+            <div class="generic-title text-center">
+                <h2 class="mb-0" data-aos="fade-up" data-aos-duration="700">Акции</h2>
+                <span class="d-block sub-txt" data-aos="fade-up" data-aos-duration="700">Наши особые предложения</span>
+            </div>
             <div class="row wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                 <div id="blog" class="col-xl-12">
                     <!-- threecolumn-blog  -->
