--- a/docvitta/templates/homepage/about-us.html
+++ b/docvitta/templates/homepage/about-us.html
@@ -6,7 +6,7 @@
     {% endblock %}
 {% block content %}
     <!-- BANNER SECTION -->
-    <section class="w-100 float-left sub-banner-con position-relative">
+    <section class="w-100 float-left sub-banner-con position-relative" style="max-height: 120px; background: url({% static 'assets/images/sub-banner-bg-img2.jpg' %}) no-repeat center;">
         <div class="wrapper2">
             <div class="sub-banner-inner-box banner-inner-box position-relative text-center w-100 float-left">
                 <h1 data-aos="fade-up" data-aos-duration="700">О нас</h1>
