--- a/docvitta/templates/homepage/doctors.html
+++ b/docvitta/templates/homepage/doctors.html
@@ -3,7 +3,7 @@
 {% block title %}Клиника "Доктор Витта" - Врачи{% endblock %}
 {% block content %}
     <!-- BANNER SECTION -->
-    <section class="w-100 float-left doctors-banner-sec sub-banner-con position-relative">
+    <section class="w-100 float-left sub-banner-con position-relative" style="max-height: 120px; background: url({% static 'assets/images/sub-banner-bg-img2.jpg' %}) no-repeat center;">
         <div class="wrapper2">
             <div class="sub-banner-inner-box banner-inner-box position-relative text-center w-100 float-left">
                 <h1 data-aos="fade-up" data-aos-duration="700">Врачи</h1>
