--- a/docvitta/templates/homepage/sale.html
+++ b/docvitta/templates/homepage/sale.html
@@ -17,7 +17,7 @@
 {% endblock %}
 {% block content %}
     <!-- BANNER SECTION -->
-    <section class="w-100 float-left sub-banner-con position-relative">
+    <section class="w-100 float-left sub-banner-con position-relative" style="max-height: 120px; background: url({% static 'assets/images/sub-banner-bg-img2.jpg' %}) no-repeat center;">
         <div class="wrapper2">
             <div class="sub-banner-inner-box banner-inner-box position-relative text-center w-100 float-left">
                 <h1 data-aos="fade-up" data-aos-duration="700">{{ sale.name }}</h1>
@@ -31,6 +31,10 @@
     <section class="singleblog-section blogpage-section w-100 float-left">
         <div class="container">
             <div class="row">
+                <div class="generic-title text-center">
+                <h2 class="mb-0" data-aos="fade-up" data-aos-duration="700">{{ sale.name }}</h2>
+                <span class="d-block sub-txt" data-aos="fade-up" data-aos-duration="700"></span>
+            </div>
                 <div class="col-lg-8 col-md-12 col-sm-12 col-12">
                     <div class="main-box">
                         <figure class="image1" data-aos="fade-up" data-aos-duration="700">
