--- a/docvitta/static/assets/css/custom.css
+++ b/docvitta/static/assets/css/custom.css
@@ -110,7 +110,9 @@ body {
 /* banner section styling start */
 .banner-con {
     padding-top: 147px;
-    background: #00b533 url(../images/graphic-img.png) no-repeat;
+    background: #5AD0BA
+    /*url(../images/graphic-img.png)*/
+    no-repeat;
     background-size: cover;
 }
 
@@ -129,7 +131,8 @@ body {
 
 .banner-title p {
     font-size: 20px;
-    color: #d4dffb;
+    /*color: #d4dffb;*/
+    color: var(--white-color);
     line-height: 35px;
     margin-bottom: 34px;
     padding-right: 100px;
@@ -1609,7 +1612,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .sub-banner-con::before {
     content: "";
-    background: var(--secondary--color);
+    /*background: var(--secondary--color);*/
+    background: #5AD0BA;
     width: 100%;
     height: 100%;
     opacity: .8;
