--- a/docvitta/templates/header.html
+++ b/docvitta/templates/header.html
@@ -27,6 +27,7 @@
                                     <li><a class="dropdown-item" href="{% url 'homepage:about' %}">О нас</a></li>
                                     <li><a class="dropdown-item" href="{% url 'homepage:vacancy' %}">Вакансии</a></li>
                                     <li><a class="dropdown-item" href="{% url 'homepage:doctors' %}">Врачи</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'homepage:partners' %}">Партнеры</a></li>
                                     <li><a class="dropdown-item" href="https://www.mofoms.ru/fond/subekty-i-uchastniki.php" target="_blank">Сведения о ТФОМС</a></li>
                                     <li><a class="dropdown-item" href="https://yandex.ru/maps/org/doktor_vitta/86760931983/reviews/?add-review=true" target="_blank">Отзывы</a></li>
                                 </ul>
