--- a/docvitta/static/assets/css/mobile.css
+++ b/docvitta/static/assets/css/mobile.css
@@ -160,7 +160,8 @@
     }
 
     .padding-top {
-        padding-top: 140px;
+        padding-top: 40px;
+        /*padding-top: 140px;*/
     }
 
     .padding-bottom {
