--- a/docvitta/templates/homepage/about-us.html
+++ b/docvitta/templates/homepage/about-us.html
@@ -41,6 +41,7 @@
                     <p data-aos="fade-up" data-aos-duration="700">Наша цель - помочь людям жить полноценной и здоровой жизнью. Мы верим, что каждый заслуживает доступной и эффективной медицинской помощи, поэтому мы стараемся сделать ее доступной для всех наших пациентов.
 Мы гордимся своей командой профессионалов, которые принимают во внимание индивидуальные потребности и желания каждого пациента. Мы ценим доверие, которое они нам оказывают, и стараемся оправдать его в каждом случае.
 Если вам требуется медицинская помощь, обратитесь к нам. Мы будем рады помочь вам и ваши близким в борьбе за здоровье и благополучие.</p>
+                    <p><strong><a href="{% static 'license.pdf' %}" target="_blank">Сведения о лицензии</a></strong></p>
                     <div class="generic-list">
                         <ul class="list-unstyled mb-0" data-aos="fade-up" data-aos-duration="700">
                             <li>Внимательный подход к каждому пациенту.</li>
