--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -17,9 +17,9 @@
                             Изменить систему здравоохранения к лучшему.
                             Мы здесь на всю жизнь.
                             Будьте здоровы!</p>
-                        <div class="banner-btn d-flex align-items-center" data-aos="fade-up" data-aos-duration="700">
-                            <a href="https://docvitta.infoclinica.ru/specialists">Записаться на консультацию</a>
-                            <a href="https://docvitta.infoclinica.ru/specialists">
+                        <div class="banner-btn d-flex align-items-center " data-aos="fade-up" data-aos-duration="700">
+                            <a href="https://docvitta.infoclinica.ru/schedule?filial=1&step=2">Записаться на консультацию</a>
+                            <a href="https://docvitta.infoclinica.ru/schedule?filial=1&step=2">
                                 <figure class="mb-0 d-flex align-items-center justify-content-center">
                                     <img src="{% static 'assets/images/top-arrow.png' %}" alt="top-arrow">
                                 </figure>
