--- a/docvitta/templates/homepage/about-us.html
+++ b/docvitta/templates/homepage/about-us.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="about-box-title">
                     <span class="d-block sub-txt" data-aos="fade-up" data-aos-duration="700">О нас</span>
-                    <h2 data-aos="fade-up" data-aos-duration="700">ВиттаМед</h2>
+<!--                    <h2 data-aos="fade-up" data-aos-duration="700">ВиттаМед</h2>-->
                     <p data-aos="fade-up" data-aos-duration="700">Наша цель - помочь людям жить полноценной и здоровой жизнью. Мы верим, что каждый заслуживает доступной и эффективной медицинской помощи, поэтому мы стараемся сделать ее доступной для всех наших пациентов.
 Мы гордимся своей командой профессионалов, которые принимают во внимание индивидуальные потребности и желания каждого пациента. Мы ценим доверие, которое они нам оказывают, и стараемся оправдать его в каждом случае.
 Если вам требуется медицинская помощь, обратитесь к нам. Мы будем рады помочь вам и ваши близким в борьбе за здоровье и благополучие.</p>
@@ -49,10 +49,10 @@
                         </ul>
                     </div>
                     <div class="generic-btn" data-aos="fade-up" data-aos-duration="700">
-                        <a href="https://docvitta.infoclinica.ru/login">
+                        <a href="https://docvitta.infoclinica.ru/schedule?filial=1&step=2">
                             Записаться на прием
                         </a>
-                        <a href="https://docvitta.infoclinica.ru/login">
+                        <a href="https://docvitta.infoclinica.ru/schedule?filial=1&step=2">
                             <figure class="mb-0">
                                 <img src="{% static 'assets/images/long-arrow.png'%}" alt="long-arrow">
                             </figure>
@@ -62,164 +62,7 @@
             </div>
         </div>
     </section>
-    <!-- ABOUT SECTION -->
-    <!-- SERVICE SECTION -->
-<!--    <div class="w-100 float-left design-img about-service-section padding-top padding-bottom position-relative">-->
-<!--        <div class="container">-->
-<!--            <div class="about-services-box">-->
-<!--                <ul class="mb-0 list-unstyled">-->
-<!--                    <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                        <figure>-->
-<!--                            <img src="{% static 'assets/images/about-service-icon1.png'%}" alt="about-service-icon1">-->
-<!--                        </figure>-->
-<!--                        <h4>Experienced-->
-<!--                            Physicians</h4>-->
-<!--                        <p>Dolor in reprehenderit-->
-<!--                            volua zesse cillum...</p>-->
-<!--                    </li>-->
-<!--                    <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                        <figure>-->
-<!--                            <img src="{% static 'assets/images/about-service-icon2.png'%}" alt="about-service-icon2">-->
-<!--                        </figure>-->
-<!--                        <h4>Personalized-->
-<!--                            Treatment</h4>-->
-<!--                        <p>Dolor in reprehenderit-->
-<!--                            volua zesse cillum...</p>-->
-<!--                    </li>-->
-<!--                    <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                        <figure>-->
-<!--                            <img src="{% static 'assets/images/about-service-icon3.png'%}" alt="about-service-icon3">-->
-<!--                        </figure>-->
-<!--                        <h4>Quality and-->
-<!--                            Safety</h4>-->
-<!--                        <p>Dolor in reprehenderit-->
-<!--                            volua zesse cillum...</p>-->
-<!--                    </li>-->
-<!--                    <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                        <figure>-->
-<!--                            <img src="{% static 'assets/images/about-service-icon4.png'%}" alt="about-service-icon4">-->
-<!--                        </figure>-->
-<!--                        <h4>Immediate-->
-<!--                            Service</h4>-->
-<!--                        <p>Dolor in reprehenderit-->
-<!--                            volua zesse cillum...</p>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-    <!-- SERVICE SECTION -->
-    <!-- CONTACT SECTION -->
-<!--    <section class="w-100 float-left contact-con result-section position-relative">-->
-<!--        <div class="dots-img position-relative">-->
-<!--            <div class="padding-top padding-bottom contact-inner-con position-relative">-->
-<!--                <div class="container">-->
-<!--                    <div class="result-inner-section">-->
-<!--                        <span class="sub-txt d-block" data-aos="fade-up" data-aos-duration="700">AMAZING RESULTS</span>-->
-<!--                        <h2 data-aos="fade-up" data-aos-duration="700">A Great Place of-->
-<!--                            Medical Health </h2>-->
-<!--                        <p data-aos="fade-up" data-aos-duration="700">Donec pulvinar tellus egetmagna aliquet ultricies.-->
-<!--                            nec eleifen-->
-<!--                            sem convallis vitae soluta nobis est eligendi optio cumque nia-->
-<!--                            impedit ruo minus id quod maxime placeat facere.</p>-->
-<!--                        <ul class="list-unstyled mb-0">-->
-<!--                            <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                                <div class="flex-wrapper">-->
-<!--                                    <div class="single-chart">-->
-<!--                                        <svg viewBox="0 0 36 36" class="circular-chart orange">-->
-<!--                                            <path class="circle-bg" d="M18 2.0845-->
-<!--                                                a 15.9155 15.9155 0 0 1 0 31.831-->
-<!--                                                a 15.9155 15.9155 0 0 1 0 -31.831" />-->
-<!--                                            <path class="circle" stroke-dasharray="85, 100" d="M18 2.0845-->
-<!--                                                a 15.9155 15.9155 0 0 1 0 31.831-->
-<!--                                                a 15.9155 15.9155 0 0 1 0 -31.831" />-->
-<!--                                            <text x="18" y="20.35" class="percentage">85%</text>-->
-<!--                                        </svg>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <div class="results-percentage-txt">-->
-<!--                                    <h4>Client's Satisfications</h4>-->
-<!--                                    <p class="mb-0">Quis autem vel eum iure reprehenderit rui-->
-<!--                                        voluptate velit esse quam nihil moles</p>-->
-<!--                                </div>-->
-<!--                            </li>-->
-<!--                            <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                                <div class="flex-wrapper">-->
-<!--                                    <div class="single-chart">-->
-<!--                                        <svg viewBox="0 0 36 36" class="circular-chart orange">-->
-<!--                                            <path class="circle-bg" d="M18 2.0845-->
-<!--                                                a 15.9155 15.9155 0 0 1 0 31.831-->
-<!--                                                a 15.9155 15.9155 0 0 1 0 -31.831" />-->
-<!--                                            <path class="circle" stroke-dasharray="78, 100" d="M18 2.0845-->
-<!--                                                a 15.9155 15.9155 0 0 1 0 31.831-->
-<!--                                                a 15.9155 15.9155 0 0 1 0 -31.831" />-->
-<!--                                            <text x="18" y="20.35" class="percentage">78%</text>-->
-<!--                                        </svg>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                                <div class="results-percentage-txt">-->
-<!--                                    <h4>Positive Rating</h4>-->
-<!--                                    <p class="mb-0">Euis autem vel eum iure reprehenderit rui-->
-<!--                                        voluptate velit esse quam nihil moles</p>-->
-<!--                                </div>-->
-<!--                            </li>-->
-<!--                        </ul>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-    <!-- CONTACT SECTION -->
-    <!-- COUNTER SECTION -->
-<!--    <div class="counter-section w-100 float-left">-->
-<!--        <div class="container">-->
-<!--            <div class="counter-inner-sec">-->
-<!--                <ul class="list-unstyled mb-0">-->
-<!--                    <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                        <figure>-->
-<!--                            <img src="{% static 'assets/images/counter-img1.png'%}" alt="counter-img1">-->
-<!--                        </figure>-->
-<!--                        <div class="counter-box position-relative">-->
-<!--                            <div class="count d-inline-block">3859</div>-->
-<!--                            <div class="plus d-inline-block"><span>+</span></div>-->
-<!--                        </div>-->
-<!--                        <span class="d-block client-status">Professional Doctors</span>-->
-<!--                    </li>-->
-<!--                    <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                        <figure>-->
-<!--                            <img src="{% static 'assets/images/counter-img2.png'%}" alt="counter-img2">-->
-<!--                        </figure>-->
-<!--                        <div class="counter-box position-relative">-->
-<!--                            <div class="count d-inline-block">8596</div>-->
-<!--                            <div class="plus d-inline-block"><span></span></div>-->
-<!--                        </div>-->
-<!--                        <span class="d-block client-status">Globally Hospitals</span>-->
-<!--                    </li>-->
-<!--                    <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                        <figure>-->
-<!--                            <img src="{% static 'assets/images/counter-img3.png'%}" alt="counter-img3">-->
-<!--                        </figure>-->
-<!--                        <div class="counter-box position-relative">-->
-<!--                            <div class="count d-inline-block">42</div>-->
-<!--                            <div class="plus d-inline-block"><span>+</span></div>-->
-<!--                        </div>-->
-<!--                        <span class="d-block client-status">Years of Expereince</span>-->
-<!--                    </li>-->
-<!--                    <li data-aos="fade-up" data-aos-duration="700">-->
-<!--                        <figure>-->
-<!--                            <img src="{% static 'assets/images/counter-img4.png'%}" alt="counter-img4">-->
-<!--                        </figure>-->
-<!--                        <div class="counter-box position-relative">-->
-<!--                            <div class="count d-inline-block">852</div>-->
-<!--                            <div class="plus d-inline-block"><span>+</span></div>-->
-<!--                        </div>-->
-<!--                        <span class="d-block client-status">Successful Operations</span>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-    <!-- COUNTER SECTION -->
+
 {% include 'getintouch.html' %}
 {% endblock %}
 {% block scripts %}
