--- a/docvitta/templates/header.html
+++ b/docvitta/templates/header.html
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link p-0" href="https://docvitta.infoclinica.ru/" target="_blank">Личный кабинет</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link p-0" href="https://docvitta.infoclinica.ru/pricelist" target="_blank">Цены</a>
+                        </li>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle p-0"  id="navbarDropdown3" role="button"
