--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -36,6 +36,18 @@
         </div>
     </section>
     <!-- BANNER SECTION -->
+<!-- COUNTER SECTION -->
+    <div class="counter-section w-100 float-left mt-5">
+        <div class="container">
+            <div class="counter-inner-sec">
+                <div class="content2">
+                            <p class="mb-0 text-white text-size-18 aos-init aos-animate" data-aos="fade-up" data-aos-duration="700">Самый замечательный момент медицинской истории наступает! Клиника "Доктор Витта" объявляет свое открытие 18 марта 2024 года в 06:30 утра!<br>
+Современные технологии, опытные специалисты, уютная атмосфера и профессиональный подход - вот ключевые принципы, которыми мы руководствуемся. Приглашаем вас отправиться в путь к заботе о себе вместе с нами и стать частью семьи "Доктор Витта". Приходите на открытие и окунитесь в атмосферу заботы и доброты!</p>
+                        </div>
+            </div>
+        </div>
+    </div>
+    <!-- COUNTER SECTION -->
 <!-- SERVICE SECTION -->
     <section class="w-100 float-left service-con padding-top padding-bottom">
         <div class="container">
@@ -73,7 +85,7 @@
                 </div>
                 <div class="about-box-title" data-aos="fade-up" data-aos-duration="700">
                     <span class="d-block sub-txt">О клинике</span>
-                    <h2>ВиттаМед</h2>
+<!--                    <h2>ВиттаМед</h2>-->
                     <p>Мы- команда медицинских специалистов, предоставляющих качественную и профессиональную медицинскую помощь нашим пациентам. Мы имеем большой опыт работы в различных областях медицины, таких как педиатрия, ультразвуковая диагностика, терапия, уход за пациентами, гастроэнтерология, диагностика заболеваний и др.</br>
 Наша команда стремится улучшить здоровье и качество жизни каждого пациента, предоставляя индивидуальный и тщательно продуманный подход к диагностике, лечению и профилактике заболеваний. Мы постоянно совершенствуем наши навыки и знания, чтобы быть в курсе последних медицинских технологий и методов лечения.
                     </p>
