--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -25,6 +25,9 @@
                                 </figure>
                             </a>
                         </div>
+                                                    <p class="mb-0 text-white text-size-18 aos-init aos-animate" data-aos="fade-up" data-aos-duration="700">Самый замечательный момент медицинской истории наступает! Клиника "Доктор Витта" объявляет свое открытие 18 марта 2024 года в 06:30 утра!<br>
+Современные технологии, опытные специалисты, уютная атмосфера и профессиональный подход - вот ключевые принципы, которыми мы руководствуемся. Приглашаем вас отправиться в путь к заботе о себе вместе с нами и стать частью семьи "Доктор Витта". Приходите на открытие и окунитесь в атмосферу заботы и доброты!</p>
+
                     </div>
                     <div class="banner-details d-flex position-relative" >
                         <figure class="mb-0 pl-5">
@@ -37,16 +40,16 @@
     </section>
     <!-- BANNER SECTION -->
 <!-- COUNTER SECTION -->
-    <div class="counter-section w-100 float-left mt-5">
-        <div class="container">
-            <div class="counter-inner-sec">
-                <div class="content2">
-                            <p class="mb-0 text-white text-size-18 aos-init aos-animate" data-aos="fade-up" data-aos-duration="700">Самый замечательный момент медицинской истории наступает! Клиника "Доктор Витта" объявляет свое открытие 18 марта 2024 года в 06:30 утра!<br>
-Современные технологии, опытные специалисты, уютная атмосфера и профессиональный подход - вот ключевые принципы, которыми мы руководствуемся. Приглашаем вас отправиться в путь к заботе о себе вместе с нами и стать частью семьи "Доктор Витта". Приходите на открытие и окунитесь в атмосферу заботы и доброты!</p>
-                        </div>
-            </div>
-        </div>
-    </div>
+<!--    <div class="counter-section w-100 float-left mt-5">-->
+<!--        <div class="container">-->
+<!--            <div class="counter-inner-sec">-->
+<!--                <div class="content2">-->
+<!--                            <p class="mb-0 text-white text-size-18 aos-init aos-animate" data-aos="fade-up" data-aos-duration="700">Самый замечательный момент медицинской истории наступает! Клиника "Доктор Витта" объявляет свое открытие 18 марта 2024 года в 06:30 утра!<br>-->
+<!--Современные технологии, опытные специалисты, уютная атмосфера и профессиональный подход - вот ключевые принципы, которыми мы руководствуемся. Приглашаем вас отправиться в путь к заботе о себе вместе с нами и стать частью семьи "Доктор Витта". Приходите на открытие и окунитесь в атмосферу заботы и доброты!</p>-->
+<!--                        </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
     <!-- COUNTER SECTION -->
 <!-- SERVICE SECTION -->
     <section class="w-100 float-left service-con padding-top padding-bottom">
