--- a/docvitta/templates/header.html
+++ b/docvitta/templates/header.html
@@ -50,6 +50,7 @@
                                     <li><a class="dropdown-item" href="https://docvitta.infoclinica.ru/pricelist" target="_blank">Платные услуги</a></li>
                                     <li><a class="dropdown-item" href="/page/7/">Информация для пациентов</a></li>
                                     <li><a class="dropdown-item" href="/page/8/">Политика обработки перс.данных</a></li>
+                                    <li><a class="dropdown-item" href="/form_anketa/">Анкета обратной связи</a></li>
                                     <li><a class="dropdown-item" href="/article/">Статьи</a></li>
                                 </ul>
                             </div>
