--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -1,44 +1,51 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Клиника "Доктор Витта"{% endblock %}
-    {% block description %}
-    <meta name="description" content="Медицинская клиника Доктор Витта - забота о вашем здоровье. Профессиональные врачи, современное оборудование, широкий спектр услуг. Запишитесь на прием сейчас!"/>
-    {% endblock %}
+{% block description %}
+<meta name="description"
+      content="Медицинская клиника Доктор Витта - забота о вашем здоровье. Профессиональные врачи, современное оборудование, широкий спектр услуг. Запишитесь на прием сейчас!"/>
+{% endblock %}
 {% block content %}
 <!-- BANNER SECTION -->
-    <section class="w-100 float-left banner-con position-relative">
-        <div class="wrapper2">
-            <div class="banner-inner-box position-relative">
-                <div class="banner-inner-con">
-                    <div class="banner-title">
-                        <h1 data-aos="fade-up" data-aos-duration="700">Клиника <br>
-                            Доктор Витта</h1>
-                        <p data-aos="fade-up" data-aos-duration="700">Забота - наше призвание.
-                            Изменить систему здравоохранения к лучшему.
-                            Мы здесь на всю жизнь.
-                            Будьте здоровы!</p>
-                        <div class="banner-btn d-flex align-items-center " data-aos="fade-up" data-aos-duration="700">
-                            <a href="https://docvitta.infoclinica.ru/schedule?filial=1&step=2">Записаться на консультацию</a>
-                            <a href="https://docvitta.infoclinica.ru/schedule?filial=1&step=2">
-                                <figure class="mb-0 d-flex align-items-center justify-content-center">
-                                    <img src="{% static 'assets/images/top-arrow.png' %}" alt="top-arrow">
-                                </figure>
-                            </a>
-                        </div>
-                                                    <p class="mb-5 text-white text-size-18 aos-init aos-animate" data-aos="fade-up" data-aos-duration="700">Самый замечательный момент медицинской истории наступает! Клиника "Доктор Витта" объявляет свое открытие 18 марта 2024 года в 06:30 утра!<br>
-Современные технологии, опытные специалисты, уютная атмосфера и профессиональный подход - вот ключевые принципы, которыми мы руководствуемся. Приглашаем вас отправиться в путь к заботе о себе вместе с нами и стать частью семьи "Доктор Витта". Приходите на открытие и окунитесь в атмосферу заботы и доброты!</p>
+<section class="w-100 float-left banner-con position-relative">
+    <div class="wrapper2">
+        <div class="banner-inner-box position-relative">
+            <div class="banner-inner-con">
+                <div class="banner-title">
+                    <h1 data-aos="fade-up" data-aos-duration="700">Клиника <br>
+                        Доктор Витта</h1>
+                    <p data-aos="fade-up" data-aos-duration="700">Забота - наше призвание.
+                        Изменить систему здравоохранения к лучшему.
+                        Мы здесь на всю жизнь.
+                        Будьте здоровы!</p>
+                    <div class="banner-btn d-flex align-items-center " data-aos="fade-up" data-aos-duration="700">
+                        <a href="https://docvitta.infoclinica.ru/schedule?filial=1&step=2">Записаться на
+                            консультацию</a>
+                        <a href="https://docvitta.infoclinica.ru/schedule?filial=1&step=2">
+                            <figure class="mb-0 d-flex align-items-center justify-content-center">
+                                <img src="{% static 'assets/images/top-arrow.png' %}" alt="top-arrow">
+                            </figure>
+                        </a>
+                    </div>
 
+                    <div>
+                        <p class="mb-5 mt-5 text-white text-size-18 aos-init aos-animate" data-aos="fade-up"
+                       data-aos-duration="700">Наше мобильное приложение</p>
+                        <a href="https://appgallery.huawei.com/app/C110239771" class="mr-5"><img src="{% static 'app_huawei.png' %}" width="150px"></a>
+                        <a href="https://play.google.com/store/apps/details?id=ru.clinicainfo.docvitta"><img src="{% static 'app_play.png' %}" width="150px"></a>
                     </div>
-                    <div class="banner-details d-flex position-relative" >
-                        <figure class="mb-0 pl-5">
-                            <img src="{% static 'assets/images/doctor-img7.png' %}" alt="doctor-img" style="height: 100%">
-                        </figure>
-                    </div>
+
+                </div>
+                <div class="banner-details d-flex position-relative">
+                    <figure class="mb-0 pl-5">
+                        <img src="{% static 'assets/images/doctor-img7.png' %}" alt="doctor-img" style="height: 100%">
+                    </figure>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- BANNER SECTION -->
+    </div>
+</section>
+<!-- BANNER SECTION -->
 <!-- COUNTER SECTION -->
 <!--    <div class="counter-section w-100 float-left mt-5">-->
 <!--        <div class="container">-->
@@ -50,153 +57,158 @@
 <!--            </div>-->
 <!--        </div>-->
 <!--    </div>-->
-    <!-- COUNTER SECTION -->
+<!-- COUNTER SECTION -->
 <!-- SERVICE SECTION -->
-    <section class="w-100 float-left service-con padding-top padding-bottom">
-        <div class="container">
-            <h2 class="pb-5">Популярные услуги</h2>
-            <div class="service-box">
-                {% for dep in departaments %}
-                <div class="service-box-item" data-aos="fade-up" data-aos-duration="700">
-                    <figure>
-                        <img src="{{dep.icon.url}}" alt="psychiatry-icon" width="73px">
-                    </figure>
-                    <h4>{{dep.name}}</h4>
-                    <p>{{dep.description}}</p>
-<!--                    <a href="#">Подробнее<i class="fas fa-angle-right"></i></a>-->
-                </div>
-                {% endfor %}
+<section class="w-100 float-left service-con padding-top padding-bottom">
+    <div class="container">
+        <h2 class="pb-5">Популярные услуги</h2>
+        <div class="service-box">
+            {% for dep in departaments %}
+            <div class="service-box-item" data-aos="fade-up" data-aos-duration="700">
+                <figure>
+                    <img src="{{dep.icon.url}}" alt="psychiatry-icon" width="73px">
+                </figure>
+                <h4>{{dep.name}}</h4>
+                <p>{{dep.description}}</p>
+                <!--                    <a href="#">Подробнее<i class="fas fa-angle-right"></i></a>-->
             </div>
+            {% endfor %}
         </div>
-    </section>
-    <!-- SERVICE SECTION -->
+    </div>
+</section>
+<!-- SERVICE SECTION -->
 <!-- ABOUT SECTION -->
-    <section class="w-100 float-left about-con design-img padding-top padding-bottom position-relative">
-        <div class="wrapper3">
-            <div class="about-box" data-aos="fade-up" data-aos-duration="700">
-                <div class="about-box-img">
-                    <div class="vedio-img position-relative">
-                        <div class="vedio-sub-img">
-                            <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img1.jpg' %}"
-                                alt="vedio-img">
-                            <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img2.jpg' %}"
-                                alt="vedio-img">
-                            <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img3.jpg' %}"
-                                alt="vedio-img">
-                        </div>
-                    </div>
-                </div>
-                <div class="about-box-title" data-aos="fade-up" data-aos-duration="700">
-                    <span class="d-block sub-txt">О клинике</span>
-<!--                    <h2>ВиттаМед</h2>-->
-                    <p>Мы- команда медицинских специалистов, предоставляющих качественную и профессиональную медицинскую помощь нашим пациентам. Мы имеем большой опыт работы в различных областях медицины, таких как педиатрия, ультразвуковая диагностика, терапия, уход за пациентами, гастроэнтерология, диагностика заболеваний и др.</br>
-Наша команда стремится улучшить здоровье и качество жизни каждого пациента, предоставляя индивидуальный и тщательно продуманный подход к диагностике, лечению и профилактике заболеваний. Мы постоянно совершенствуем наши навыки и знания, чтобы быть в курсе последних медицинских технологий и методов лечения.
-                    </p>
-                    <div class="generic-list">
-                        <ul class="list-unstyled mb-0">
-                            <li>Ежемесячные чек-апы</li>
-                            <li>УЗИ диагностика</li>
-                            <li>Анализы</li>
-                        </ul>
-                        <ul class="list-unstyled mb-0">
-                            <li>Семейный врач</li>
-                            <li>Холтер, Смад, ЭКГ</li>
-                            <li>Профилактические массажи</li>
-                        </ul>
-                    </div>
-                    <div class="generic-btn">
-                        <a href="{% url 'homepage:about' %}">
-                            Подробнее
-                        </a>
-                        <a href="{% url 'homepage:about' %}">
-                            <figure class="mb-0">
-                                <img src="{% static 'assets/images/long-arrow.png' %}" alt="long-arrow">
-                            </figure>
-                        </a>
+<section class="w-100 float-left about-con design-img padding-top padding-bottom position-relative">
+    <div class="wrapper3">
+        <div class="about-box" data-aos="fade-up" data-aos-duration="700">
+            <div class="about-box-img">
+                <div class="vedio-img position-relative">
+                    <div class="vedio-sub-img">
+                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img1.jpg' %}"
+                             alt="vedio-img">
+                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img2.jpg' %}"
+                             alt="vedio-img">
+                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img3.jpg' %}"
+                             alt="vedio-img">
                     </div>
                 </div>
             </div>
+            <div class="about-box-title" data-aos="fade-up" data-aos-duration="700">
+                <span class="d-block sub-txt">О клинике</span>
+                <!--                    <h2>ВиттаМед</h2>-->
+                <p>Мы- команда медицинских специалистов, предоставляющих качественную и профессиональную медицинскую
+                    помощь нашим пациентам. Мы имеем большой опыт работы в различных областях медицины, таких как
+                    педиатрия, ультразвуковая диагностика, терапия, уход за пациентами, гастроэнтерология, диагностика
+                    заболеваний и др.</br>
+                    Наша команда стремится улучшить здоровье и качество жизни каждого пациента, предоставляя
+                    индивидуальный и тщательно продуманный подход к диагностике, лечению и профилактике заболеваний. Мы
+                    постоянно совершенствуем наши навыки и знания, чтобы быть в курсе последних медицинских технологий и
+                    методов лечения.
+                </p>
+                <div class="generic-list">
+                    <ul class="list-unstyled mb-0">
+                        <li>Ежемесячные чек-апы</li>
+                        <li>УЗИ диагностика</li>
+                        <li>Анализы</li>
+                    </ul>
+                    <ul class="list-unstyled mb-0">
+                        <li>Семейный врач</li>
+                        <li>Холтер, Смад, ЭКГ</li>
+                        <li>Профилактические массажи</li>
+                    </ul>
+                </div>
+                <div class="generic-btn">
+                    <a href="{% url 'homepage:about' %}">
+                        Подробнее
+                    </a>
+                    <a href="{% url 'homepage:about' %}">
+                        <figure class="mb-0">
+                            <img src="{% static 'assets/images/long-arrow.png' %}" alt="long-arrow">
+                        </figure>
+                    </a>
+                </div>
+            </div>
         </div>
+    </div>
 
-        <div id="fade1" onClick="lightbox_close();"></div>
-    </section>
-    <!-- ABOUT SECTION -->
+    <div id="fade1" onClick="lightbox_close();"></div>
+</section>
+<!-- ABOUT SECTION -->
 {% include 'getintouch.html' %}
 {% endblock %}
 
 
 {% block scripts %}
-    <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
-    <script src="{% static 'assets/js/popper.min.js' %}"></script>
-    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'assets/js/aos.js' %}"></script>
-    <script src="{% static 'assets/js/owl.carousel.js' %}"></script>
-    <script src="{% static 'assets/js/jquery.validate.js' %}"></script>
-    <script src="{% static 'assets/js/contact-form.js' %}"></script>
-    <script>
-        $(window).on('load', function(){
+<script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
+<script src="{% static 'assets/js/popper.min.js' %}"></script>
+<script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'assets/js/aos.js' %}"></script>
+<script src="{% static 'assets/js/owl.carousel.js' %}"></script>
+<script src="{% static 'assets/js/jquery.validate.js' %}"></script>
+<script src="{% static 'assets/js/contact-form.js' %}"></script>
+<script>
+    $(window).on('load', function () {
         // Preloader
         $('.loader').fadeOut();
         $('.loader-mask').delay(350).fadeOut('slow');
-        });
-    </script>
-    <script>
-        var btn = $('#button');
+    });
+</script>
+<script>
+    var btn = $('#button');
 
-         $(window).scroll(function() {
-           if ($(window).scrollTop() > 300) {
-           btn.addClass('show');
-         }
-          else {
-           btn.removeClass('show');
-         }
-         });
-         btn.on('click', function(e) {
-         e.preventDefault();
-         $('html, body').animate({scrollTop:0}, '300');
-       });
-    </script>
-    <script>
-        AOS.init();
-    </script>
-    <script>
-        $('#owl-carouselone').owlCarousel({
-            loop: true,
-            margin: 10,
-            nav: true,
-            autoplay: true,
-            autoplayTimeout: 10000,
-            autoplayHoverPause: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 2
-                },
-                1000: {
-                    items: 3
-                }
+    $(window).scroll(function () {
+        if ($(window).scrollTop() > 300) {
+            btn.addClass('show');
+        } else {
+            btn.removeClass('show');
+        }
+    });
+    btn.on('click', function (e) {
+        e.preventDefault();
+        $('html, body').animate({scrollTop: 0}, '300');
+    });
+</script>
+<script>
+    AOS.init();
+</script>
+<script>
+    $('#owl-carouselone').owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        autoplay: true,
+        autoplayTimeout: 10000,
+        autoplayHoverPause: true,
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 2
+            },
+            1000: {
+                items: 3
             }
-        })
-        $('#owl-carouseltwo').owlCarousel({
-            loop: true,
-            margin: 30,
-            nav: true,
-            autoplay: true,
-            autoplayTimeout: 10000,
-            autoplayHoverPause: true,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 2
-                },
-                1000: {
-                    items: 3
-                }
+        }
+    })
+    $('#owl-carouseltwo').owlCarousel({
+        loop: true,
+        margin: 30,
+        nav: true,
+        autoplay: true,
+        autoplayTimeout: 10000,
+        autoplayHoverPause: true,
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 2
+            },
+            1000: {
+                items: 3
             }
-        })
-    </script>
+        }
+    })
+</script>
 {% endblock %}
