--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -28,7 +28,7 @@
                         </a>
                     </div>
 
-                    <div>
+                    <div class="mb-5">
                         <p class="mb-5 mt-5 text-white text-size-18 aos-init aos-animate" data-aos="fade-up"
                        data-aos-duration="700">Наше мобильное приложение</p>
                         <a href="https://appgallery.huawei.com/app/C110239771" class="mr-5"><img src="{% static 'app_huawei.png' %}" width="150px"></a>
