--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -84,11 +84,11 @@
             <div class="about-box-img">
                 <div class="vedio-img position-relative">
                     <div class="vedio-sub-img">
-                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img1.jpg' %}"
+                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/DSC01988.webp' %}"
                              alt="vedio-img">
-                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img2.jpg' %}"
+                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/DSC02007.webp' %}"
                              alt="vedio-img">
-                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/about-img3.jpg' %}"
+                        <img class="thumb poster-con index1-poster" src="{% static 'assets/images/DSC01972.webp' %}"
                              alt="vedio-img">
                     </div>
                 </div>
